// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deletes rollup terser plugin using crafty.config.js 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/compiles-no-terser/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
[__:__:__] Finished 'js_myTSBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Deletes rollup terser plugin using crafty.config.js 2`] = `
"class C {
  constructor() {
    /* eslint-disable-next-line no-console */
    console.log(\\"Something happens here\\");
  }

  someMethod() {
    /* eslint-disable-next-line no-alert */
    alert(\\"yes, alert still exists\\");
  }

}

class D {
  constructor() {
    /* eslint-disable-next-line no-console */
    console.log(\\"Something else happens here\\");
  }

  someMethod() {
    /* eslint-disable-next-line no-alert */
    alert(\\"yes, alert still exists\\");
  }

}

export { C, D };
//# sourceMappingURL=myTSBundle.min.js.map
"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...

__PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/fails/js/typescript.ts
  14:0  error  Parsing error: Unexpected token. A constructor, method, accessor, or property was expected

✖ 1 problem (1 error, 0 warnings)

[js_myTSBundle] (!) Errors were found
[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Errors were found
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
}
`;

exports[`Keeps imports unresolved for Babel Runtime 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/compiles-import-runtime/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
[__:__:__] Finished 'js_myTSBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Keeps imports unresolved for Babel Runtime 2`] = `
"import _classCallCheck from '@babel/runtime/helpers/classCallCheck';
import _createClass from '@babel/runtime/helpers/createClass';

var C = /*#__PURE__*/function () {
  function C() {
    _classCallCheck(this, C);

    /* eslint-disable-next-line no-console */
    console.log(\\"Something happens here\\");
  }

  _createClass(C, [{
    key: \\"someMethod\\",
    value: function someMethod() {
      /* eslint-disable-next-line no-alert */
      alert(\\"yes, alert still exists\\");
    }
  }]);

  return C;
}();

var D = /*#__PURE__*/function () {
  function D() {
    _classCallCheck(this, D);

    /* eslint-disable-next-line no-console */
    console.log(\\"Something else happens here\\");
  }

  _createClass(D, [{
    key: \\"someMethod\\",
    value: function someMethod() {
      /* eslint-disable-next-line no-alert */
      alert(\\"yes, alert still exists\\");
    }
  }]);

  return D;
}();

export { C, D };
//# sourceMappingURL=myTSBundle.min.js.map
"
`;

exports[`Lints TypeScript with rollup 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...

__PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/lints/js/SomeLibrary.ts
   1:1  error  Delete \`⏎\`                                        @swissquote/swissquote/prettier/prettier
   3:3  error  Delete \`··\`                                       @swissquote/swissquote/prettier/prettier
   4:1  error  Replace \`········\` with \`····\`                    @swissquote/swissquote/prettier/prettier
   5:1  error  Replace \`····\` with \`··\`                          @swissquote/swissquote/prettier/prettier
   7:1  error  Delete \`··\`                                       @swissquote/swissquote/prettier/prettier
   8:3  error  Insert \`··\`                                       @swissquote/swissquote/prettier/prettier
   9:1  error  Delete \`··\`                                       @swissquote/swissquote/prettier/prettier
  11:3  error  Replace \`··divide(a,·b)⏎···\` with \`divide(a,·b)\`  @swissquote/swissquote/prettier/prettier
  13:1  error  Replace \`········\` with \`····\`                    @swissquote/swissquote/prettier/prettier
  14:1  error  Delete \`····\`                                     @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/lints/js/script.ts
   1:1   error    Replace \`⏎import·{\` with \`import·{·\`         @swissquote/swissquote/prettier/prettier
   6:3   error    Replace \`··constructor·\` with \`constructor\`  @swissquote/swissquote/prettier/prettier
   7:5   warning  Unexpected console statement                 no-console
   8:2   error    Insert \`·\`                                   @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                 no-console
  11:17  error    Replace \`·test(·\` with \`test(\`               @swissquote/swissquote/prettier/prettier
  13:16  error    Replace \`·(·)·=>⏎···\` with \`()·=>\`           @swissquote/swissquote/prettier/prettier
  17:7   warning  Unexpected console statement                 no-console
  18:6   error    Replace \`·,·300)\` with \`,·300);\`             @swissquote/swissquote/prettier/prettier

✖ 21 problems (18 errors, 3 warnings)
  18 errors and 0 warnings potentially fixable with the \`--fix\` option.

[js_myBundle] (!) Errors were found
[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Errors were found
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
}
`;

exports[`Works with rollup 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
[__:__:__] Finished 'js_myTSBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Works with rollup 2`] = `
"class e{constructor(){console.log(\\"Something happens here\\")}someMethod(){alert(\\"yes, alert still exists\\")}}class s{constructor(){console.log(\\"Something else happens here\\")}someMethod(){alert(\\"yes, alert still exists\\")}}export{e as C,s as D};
//# sourceMappingURL=myTSBundle.min.js.map
"
`;
